Cleaned up styles and corrected spacing n .starter

--- a/src/components/Starter.css
+++ b/src/components/Starter.css
@@ -2,9 +2,8 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding-block: 5rem;
-  gap: 5rem;
+  justify-content: space-evenly;
+  gap: 1rem;
 }
 
 .starter > * {
@@ -41,7 +40,7 @@
 
 .intro {
   max-width: 45rem;
-  border-radius: .35rem;
+  border-radius: 0.35rem;
   border-color: var(--gray);
   box-shadow: var(--box-shadow);
 }
@@ -51,9 +50,9 @@
 }
 
 .more-info {
-  font-weight:500;
+  font-weight: 500;
   color: var(--gray);
-  text-shadow: -1px 1px 1px rgba(255,255,255,0.35);
+  text-shadow: -1px 1px 1px rgba(255, 255, 255, 0.35);
 }
 
 .border-dark {
